# cadybara-kitchen

./: .gitignore  CLA.md  DESIGN.md  PROJECT.md  README.md  SENIOR_DEV_HANDOFF.md  WORKER_QUICKSTART.md  pyproject.toml
cadybara/: __init__.py  artifacts.py  cadquery_runner.py  cli.py  config.py  csv_export.py  lab_server.py  model_queue.py  records.py  reviews.py  runner.py  training.py
cadybara/providers/: __init__.py  base.py  dry_run.py  ollama.py
cadybara/scoring/: __init__.py  base.py  stub.py
cadybara/strategies/: __init__.py  base.py  identity.py
configs/: example.yaml  models_local.yaml  pilot_local.yaml
lab/: app.js  index.html  styles.css
projects/wall-planter-cad-study/: README.md
projects/wall-planter-cad-study/configs/: family_sweep.yaml  morning_sweep.yaml  smoke_fast.yaml  smoke_one.yaml
projects/wall-planter-cad-study/docs/: review_protocol.md
projects/wall-planter-cad-study/prompts/: wall_planter_ladder.md
results/: README.md
scripts/: worker_publish_results.py  worker_setup.ps1  worker_setup.sh  worker_start_lab.ps1  worker_start_lab.sh
tests/: conftest.py  test_artifacts.py  test_cadquery_runner.py  test_cli.py  test_config.py  test_lab_server.py  test_model_queue.py  test_providers_ollama.py  test_records.py  test_runner.py  test_runner_error_handling.py  test_strategies.py  test_training.py
viewer/: app.js  index.html  styles.css
