[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadybara-kitchen"
version = "0.1.0"
description = "CLI research harness for benchmarking local Ollama prompt sensitivity."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    # CadQuery turns model-written CAD instructions into STL/STEP review artifacts.
    "cadquery>=2.7",
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
    "typer>=0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "respx>=0.21",
]

[project.scripts]
cadybara = "cadybara.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["cadybara"]

[tool.pytest.ini_options]
testpaths = ["tests"]
